Tweaked things for he who knows nothing

--- a/form.html
+++ b/form.html
@@ -6,7 +6,10 @@
 <body>
 <div>
   <form method="POST" action="/">     
-      <label>Note for yourself</label><input name="note" type="text" value="" />
+      <label>Note for yourself</label>
+      <p></p>
+      <input name="note" type="text" value="" />
+      <p></p>
       <input type="submit" value="submit" />
   </form>
 </div>
